Forget godeps for now, just deploy

--- a/circle.yml
+++ b/circle.yml
@@ -1,16 +1,5 @@
-dependencies:
-  pre:
-    - rm -rf ~/.go_workspace/src/github.com/memgo/api
-    - mkdir -p ~/.go_workspace/src/github.com/memgo/
-    - ln -s ~/api ~/.go_workspace/src/github.com/memgo/api
-    - go get github.com/tools/godep
-  override:
-    - godep go build
-test:
-  override:
-    - godep go test
 deployment:
-  staging:
-    branch: master
+  production:
+    branch: production
     heroku:
-      appname: memgo-api
+        appname: memgo-api
